@@ -42,6 +42,23 @@ android {
     }
 }
 
+kapt {
+    javacOptions {
+        // JVM args for KAPT for JDK 17+
+        option("--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
+        option("--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED")
+        option("--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED")
+        option("--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED")
+        option("--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
+        option("--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED")
+        option("--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
+        option("--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
+        option("--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
+        option("--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
+        option("--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED")
+    }
+}
+
 dependencies {
     implementation 'androidx.core:core-ktx:1.12.0' // Updated to a common recent version
     implementation 'androidx.appcompat:appcompat:1.6.1' // Updated to a common recent version
